# SMPC-based-async-FL

./: .gitignore  README.md  SMPC.cpp  pyproject.toml
flwr_app/: __init__.py  client_app.py  client_client_dropout.py  global_client_registry.py  output  server_app.py  task.py
