[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.16.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy>=2.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "amaan"

[tool.flwr.app.components]
serverapp = "flwr_app.server_app:app"
clientapp = "flwr_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
# fraction fit bataaega ki initially sirf kuch hi fraction of clients par code chalaana hai so , for 0.5 of 5 2 clients will be sampled
fraction-fit = 1
local-epochs = 1
threshold=5
num-partitions=10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10


